# tts-voice-cloning-OMNI

./: .gitignore  Colin TTS Local.lnk  Fix-RTX50-CUDA.bat  README.md  Start-ColinTTS-Docker-GPU.sh  Start-ColinTTS.bat  Sync-State-To-Git.bat  colin-tts-launcher.bat  install_chatterbox_worker.bat  install_chatterbox_worker_cuda.bat  install_f5_worker.bat  install_f5_worker_cuda.bat  install_qwen_worker.bat  install_qwen_worker_blackwell.bat  install_tts_deps.bat  install_tts_deps_cuda126.bat  install_tts_deps_cuda128.bat  install_valtec_worker.bat  install_vieneu_gpu.bat  install_vieneu_worker.bat  install_vieneu_worker_cuda.bat  pyproject.toml  run_app.bat  run_tkinter.bat  start_app.bat  start_app.vbs  stop_app.bat
.claude/: settings.local.json
Clone sample/: Boy_1.txt  Girl_1.txt  VN_HN Bao Trung.txt
config/: app.yaml  license_public_key.pem  models.yaml  storage.example.yaml
docs/: README.md  docker_gpu_webui.md  engine-architecture.md  engineering-decisions.md  license_obfuscation_release_notes.md  portable_distribution_notes.md  rented-machine-workflow.md  runtime-device-policy.md  vieneu-engine.md  voice-profile-optimization.md  windows-launchers.md
engines/chatterbox_worker/: README.md  pyproject.toml  synthesize.py
engines/f5_worker/: README.md  pyproject.toml  synthesize.py
engines/qwen_worker/: README.md  persistent_worker.py  pyproject.toml  synthesize.py
engines/valtec_worker/: README.md  imp.py  pyproject.toml  synthesize.py
engines/vieneu_worker/: README.md  encode_reference.py  pyproject.toml  synthesize.py  worker_utils.py
engines/vieneu_worker/modes/: __init__.py  lora_mode.py  pytorch_mode.py  standard.py  turbo.py
packaging/: build_portable.ps1
plans/reports/: researcher-vieneu-models-comprehensive.md
scripts/: export_user_state.py  install_chatterbox_worker_cuda_linux.sh  install_f5_worker_cuda_linux.sh  install_from_github.ps1  install_qwen_worker_cuda_linux.sh  install_tts_deps_cuda_linux.sh  install_valtec_worker_linux.sh  install_vieneu_worker_cuda_linux.sh  restore_user_state.py  start_colin_tts.ps1  start_docker_gpu_webui.sh  sync_state_to_git.ps1
src/omni_tts_core/: __init__.py  config.py  engine_profile_cache.py  file_queue.py  model_catalog.py  model_registry.py  model_storage.py  paths.py  progress.py  runtime_devices.py  runtime_status.py  service.py  setup_tasks.py  storage_paths.py  user_state.py  voice_profile_policy.py  voice_profiles.py  worker_installation.py
src/omni_tts_core/audio/: __init__.py  wav_tools.py
src/omni_tts_core/engines/: base.py  chatterbox_engine.py  f5tts_engine.py  omnivoice_engine.py  qwen_engine.py  subprocess_tools.py  valtec_engine.py  vieneu_engine.py
src/omni_tts_core/jobs/: __init__.py  store.py
src/omni_tts_core/subtitles/: __init__.py  srt_builder.py
src/omni_tts_core/text/: __init__.py  source_reader.py  splitter.py  vi_normalizer.py
src/omni_tts_core/text/cleaner/: __init__.py  datestime.py  num2vi.py  numerical.py  symbols.py  text_norm.py
src/omni_tts_license/: __init__.py  errors.py  local_signed.py  machine_id.py  models.py  provider.py  store.py
src/omni_tts_shared/: __init__.py  errors.py  languages.py  schemas.py  valtec_voices.py  vieneu_codecs.py  voice_presets.py
src/omni_tts_ui_gradio/: __init__.py  chatterbox_settings.py  components.py  f5_settings.py  handlers.py  main.py
src/omni_tts_ui_tkinter/: __init__.py  app.py  audio_processor.py  config_manager.py  controller.py  dnd.py  main.py  path_intake.py  preferences.py  srt_parser.py  state.py  voice_panel.py  widgets.py
src/omni_tts_ui_tkinter/panels/: __init__.py  batch_frame.py  contact_panel.py  generation_tabs.py  license_panel.py  log_frame.py  model_frame.py  trim_frame.py  voice_frame.py
test/: 0019_cn-vn.srt  0019_cn-vn_001.srt  0019_cn-vn_002.srt  0019_cn-vn_003.srt  0019_cn-vn_004.srt  0019_cn-vn_005.srt  0019_cn-vn_006.srt  0019_cn-vn_008.srt  0019_cn-vn_009.srt  0019_cn-vn_010.srt
tests/: test_chatterbox_integration.py  test_f5tts_integration.py  test_file_queue.py  test_khanh_tts_integration.py  test_license_mode.py  test_path_intake.py  test_service_split_batch.py  test_setup_tasks.py  test_source_reader.py  test_storage_paths.py  test_user_state.py
tools/: check_file_lengths.py
tools/license_admin/: admin.html  license_admin.py  license_admin_web.py  open_license_admin.bat
user_state/: settings.json
user_state/voices/profiles/: kallay-6068ff65.json  ngoc-huyen-10s-7184441d.json  ngoc-huyen-vbee-2-0-12s-bcc13540.json  test-0a2820a0.json  thezoespace-5s-bb3a6a61.json
