[project]
name = "omni-tts-local"
version = "0.1.0"
description = "Local Vietnamese-first TTS and voice cloning app with swappable UI layers."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "cryptography>=42.0.0",
    "gradio>=4.44.0",
    "huggingface-hub>=0.24.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "soundfile>=0.12.1",
    "tkinterdnd2>=0.4.2",
]

[project.optional-dependencies]
tts = [
    "omnivoice>=0.1.5",
    "torch",
    "torchaudio",
]

[project.scripts]
omni-tts-gradio = "omni_tts_ui_gradio.main:main"
omni-tts-tkinter = "omni_tts_ui_tkinter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/omni_tts_core",
    "src/omni_tts_license",
    "src/omni_tts_shared",
    "src/omni_tts_ui_gradio",
    "src/omni_tts_ui_tkinter",
]
