[project]
name = "chatterbox-worker"
version = "0.1.0"
description = "Isolated Chatterbox Turbo worker for Omni TTS Local."
requires-python = ">=3.10,<3.13"
dependencies = [
    "chatterbox-tts>=0.1.7",
    "setuptools>=70.0.0,<81.0.0",
    "soundfile>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
