[project]
name = "valtec-worker"
version = "0.1.0"
description = "Isolated Valtec Vietnamese TTS worker for Omni TTS Local."
requires-python = ">=3.10,<3.13"
dependencies = [
    "soundfile>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
