[project]
name = "vieneu-worker"
version = "0.1.0"
description = "Isolated VieNeu-TTS worker for Omni TTS Local."
requires-python = ">=3.10,<3.13"
dependencies = [
    "neucodec>=0.0.5",
    "soundfile>=0.12.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
