[project]
name = "vieneu-worker"
version = "0.1.0"
description = "Isolated VieNeu-TTS worker for Omni TTS Local."
requires-python = ">=3.10,<3.13"
dependencies = [
    "neucodec>=0.0.5",
    "soundfile>=0.12.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "pyarrow>=19.0,<20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
